--- a/src/styles/utils/_vars.scss
+++ b/src/styles/utils/_vars.scss
@@ -1,1 +1,15 @@
 $c-gray: #eee;
+$main: #e5e5e5;
+$green: #1a5a4c;
+$black:#0f0e08;
+$gray: #687480;
+$coral: #f14a27;
+
+$headet-height-m : 553px;
+$headet-height-t : 472px;
+$headet-height-d : 855px;
+
+$button-heigh-m: 50px;
+$button-heigh-t: 70px;
+
+$icon-size: 24px;
