--- a/src/styles/main.scss
+++ b/src/styles/main.scss
@@ -1,7 +1,22 @@
 @import "utils";
 @import "fonts";
-@import "typography";
-
-body {
-  background: $c-gray;
-}
+@import "./blocks/page";
+@import "./blocks/header";
+@import "./blocks/icon";
+@import "./blocks/logo";
+@import "./blocks/menu";
+@import "./blocks/event";
+@import "./blocks/grid";
+@import "./blocks/tickets";
+@import "./blocks/section";
+@import "./blocks/card";
+@import "./blocks/lecture";
+@import "./blocks/signboard";
+@import "./blocks/gallery";
+@import "./blocks/wrapper";
+@import "./blocks/subscription";
+@import "./blocks/form";
+@import "./blocks/footer";
+@import "./blocks/socialmedia";
+@import "./blocks/nav";
+@import "./blocks/schedule";
