--- a/src/styles/utils/_mixins.scss
+++ b/src/styles/utils/_mixins.scss
@@ -4,3 +4,15 @@
     #{$_property}: $_toValue;
   }
 }
+
+@mixin onTablets {
+  @media (min-width: 700px) {
+    @content;
+  }
+}
+
+@mixin onDesktop {
+  @media (min-width: 1260px) {
+    @content;
+  }
+}
