--- a/src/styles/blocks/events-item.scss
+++ b/src/styles/blocks/events-item.scss
@@ -5,6 +5,9 @@
     grid-column: 1 / -1;
     margin-bottom: 20px;
 
+    transition-duration: 0.5s;
+    @include hover (transform, scale(1.1));
+
     img {
       width: 100%;
     }
