--- a/src/styles/main.scss
+++ b/src/styles/main.scss
@@ -15,6 +15,9 @@
 @import "./blocks/current-events.scss";
 @import "./blocks/events-item.scss";
 @import "./blocks/romantic.scss";
+@import "./blocks/gallery.scss";
+@import "./blocks/subscription.scss";
+@import "./blocks/footer.scss";
 
 body {
   background: $c-gray;
