--- a/src/styles/blocks/icon.scss
+++ b/src/styles/blocks/icon.scss
@@ -18,6 +18,7 @@
     width: 12px;
     height: 12px;
     margin-right: 32px;
+    transition-duration: 0.5s;
 
     @include hover(transform, scale(1.2));
 
