--- a/src/styles/blocks/romantic.scss
+++ b/src/styles/blocks/romantic.scss
@@ -8,7 +8,7 @@
   @include smalldesktop {
     margin-bottom: 200px;
   }
-  
+
   &__container {
     @include  gridPage;
   }
@@ -29,6 +29,9 @@
     background: $color-white;
     box-shadow: 0px 2px 0px rgba(26, 90, 76, 0.25);
     padding: 0;
+
+    transition-duration: 0.5s;
+    @include hover (transform, scale(1.1));
 
 
     @include smartphone {
