--- a/src/styles/blocks/_events.scss
+++ b/src/styles/blocks/_events.scss
@@ -75,7 +75,7 @@
 
   &__box {
     position: absolute;
-    bottom: -70px;
+    top: 140px;
     left: 20px;
 
     display: flex;
@@ -91,11 +91,12 @@
     @media (min-width: 768px) {
       @include size (570px, 204px);
       left: 65px;
-      bottom: -102px;
+      top: 290px;
     }
 
     @media (min-width: 1280px) {
       left: 355px;
+      top: 450px;
     }
   }
 }
