--- a/src/styles/blocks/_main-page.scss
+++ b/src/styles/blocks/_main-page.scss
@@ -4,9 +4,11 @@
   &__header {
     display: grid;
     grid-template-columns: repeat(2, 130px);
+    justify-content: center;
+    align-items: center;
     z-index: 1;
     position: absolute;
-    padding: 10px 23px 0;
+    padding: 10px 23px 0 23px;
     grid-column: 1/3;
 
     @media (min-width: 768px) {
@@ -35,7 +37,6 @@
   }
 
   &__logo {
-    grid-column: 2/3;
 
     @include size (55px, 61px);
 
@@ -45,7 +46,7 @@
     color: #000;
     text-decoration: none;
     text-align: center;
-
+    margin-left: -20px;
     @media (min-width: 768px) {
       grid-column: 4/6;
       @include size (200px, 72px);
