fixed after review

--- a/src/styles/blocks/_event.scss
+++ b/src/styles/blocks/_event.scss
@@ -2,6 +2,12 @@
   position: relative;
   color: #687480;
   text-decoration: none;
+  transition: border-bottom color 0.3s;
+
+  &:hover {
+    text-decoration: underline;
+    color: $gray;
+  }
 
   &::before {
     content: "";
