--- a/src/styles/blocks/_footer.scss
+++ b/src/styles/blocks/_footer.scss
@@ -105,6 +105,12 @@
       text-decoration: none;
       color: #0f0e08;
       cursor: pointer;
+      transition: border-bottom color 0.3s;
+
+      &:hover {
+        text-decoration: underline;
+        color: $gray;
+      }
     }
   }
 
