--- a/src/styles/blocks/_menu.scss
+++ b/src/styles/blocks/_menu.scss
@@ -37,8 +37,16 @@
     &-icon {
       background-image: url(../images/menu-close.svg);
       background-repeat: no-repeat;
-      width: 24px;
+      width: $icon-size;
+      height: $icon-size;
       flex-shrink: 0;
+
+      transition: box-shadow 0.3s;
+
+      &:hover {
+        box-shadow: 1px 4px 16px #e8e8f066;
+        border-radius: 20%;
+      }
     }
   }
 
