--- a/src/styles/blocks/_nav.scss
+++ b/src/styles/blocks/_nav.scss
@@ -1,5 +1,5 @@
 .nav {
-
+  
   &__item {
     display: flex;
     flex-direction: column;
@@ -16,6 +16,12 @@
       line-height: 100%;
       color: #fff;
       text-decoration: none;
+      transition: border-bottom color 0.3s;
+
+      &:hover {
+        text-decoration: underline;
+        color: $gray;
+      }
 
       @include onDesktop {
         font-size: 22px;
