--- a/src/styles/blocks/_tickets.scss
+++ b/src/styles/blocks/_tickets.scss
@@ -12,6 +12,11 @@
     cursor: pointer;
     text-decoration: none;
     flex-grow: 1;
+    transition: box-shadow 0.3s;
+
+    &:hover {
+      box-shadow: 1px 4px 16px #2f2f3e66;
+    }
 
     @include onTablets {
       height: 70px;
