--- a/src/styles/blocks/_form.scss
+++ b/src/styles/blocks/_form.scss
@@ -4,6 +4,11 @@
   align-items: center;
   width: 100%;
   height: 50px;
+  transition: box-shadow 0.3s;
+
+  &:hover {
+    box-shadow: 1px 4px 16px #e8e8f066;
+  }
 
   @include onTablets {
     gap: 16px;
@@ -26,6 +31,7 @@
     font-size: 14px;
     line-height: 100%;
     color: #687480;
+    cursor: pointer;
 
     @include onTablets {
       height: 70px;
@@ -41,6 +47,7 @@
     width: 50px;
     height: 50px;
     background-color: $coral;
+    cursor: pointer;
 
     @include onTablets {
       width: 70px;
