--- a/src/styles/blocks/_icon.scss
+++ b/src/styles/blocks/_icon.scss
@@ -10,6 +10,11 @@
   left: 20px;
   top: 27px;
   z-index: 1;
+  transition: box-shadow 0.3s;
+
+  &:hover {
+    box-shadow: 1px 4px 16px #2f2f3e66;
+  }
 
   @include onTablets {
     top: 39px;
