--- a/src/styles/blocks/_list.scss
+++ b/src/styles/blocks/_list.scss
@@ -11,6 +11,7 @@
     grid-column: 1/2;
     text-decoration: none;
     color: inherit;
+    cursor: pointer;
 
     &:nth-child(even) {
       grid-column: 2/3;
