--- a/src/styles/blocks/_main-page.scss
+++ b/src/styles/blocks/_main-page.scss
@@ -6,9 +6,9 @@
     grid-template-columns: repeat(2, 130px);
     justify-content: center;
     align-items: center;
-    z-index: 1;
+    z-index: 2;
     position: absolute;
-    padding: 10px 23px 0 23px;
+    padding: 10px 23px 0;
     grid-column: 1/3;
 
     @media (min-width: 768px) {
@@ -58,7 +58,7 @@
     }
 
     transition: transform 0.5s ease;
-
+    cursor: pointer;
     &:hover {
       transform: scale(1.1);
     }
