--- a/src/styles/blocks/_subscribe.scss
+++ b/src/styles/blocks/_subscribe.scss
@@ -77,7 +77,14 @@
     @include size (50px, 50px);
     border: none;
     background-color: #f14a27;
+    cursor: pointer;
 
+    transition: transform 0.5s ease;
+
+    &:hover {
+      transform: scale(1.05);
+    }
+    
     @media (min-width: 768px) {
       @include size (70px, 70px);
       margin-left: 16px;
