--- a/src/styles/blocks/_footer.scss
+++ b/src/styles/blocks/_footer.scss
@@ -18,6 +18,7 @@
     color: #0f0e08;
     @include size (62px, 72px);
     transition: transform 0.5s ease;
+    cursor: pointer;
 
     &:hover {
       transform: scale(1.1);
@@ -42,6 +43,7 @@
     @include size (24px, 24px);
     text-decoration: none;
     transition: transform 0.5s ease;
+    cursor: pointer;
 
     &:nth-child(1) {
       margin-right: 20px;
