--- a/src/styles/blocks/_main-page.scss
+++ b/src/styles/blocks/_main-page.scss
@@ -176,9 +176,11 @@
   }
 
   &__arrow {
+    grid-column: 1;
     position: absolute;
     top: 522px;
-    left: 92px;
+
+    padding: 0 0 55px;
     font-weight: 700;
     font-size: 14px;
     line-height: 100%;
