--- a/src/styles/blocks/_menu.scss
+++ b/src/styles/blocks/_menu.scss
@@ -7,10 +7,9 @@
   transform: translateX(100%);
   transition: transform 800ms;
 
-  padding: 27px 25px;
+  padding: 27px 20px;
   background-color: $c-green;
   color: #fff;
-  height: 400px;
   width: 100%;
   z-index: 10;
 
@@ -20,10 +19,24 @@
 
   @media (min-width: 768px) {
     height: 225px;
+    padding: 0;
   }
+
   @media (min-width: 1280px) {
     height: 233px;
-    padding: 35px;
+  }
+
+  &__container {
+    height: 400px;
+
+    @media (min-width: 768px) {
+      height: 100%;
+      padding: 45px 30px;
+    }
+
+    @media (min-width: 1280px) {
+      padding: 45px 0;
+    }
   }
 
   &__close {
@@ -49,7 +62,6 @@
     @media (min-width: 1280px) {
       grid-column: 2/7;
       grid-row: 1;
-      gap: 100px;
       font-size: 22px;
     }
   }
@@ -65,7 +77,7 @@
       grid-row: 1;
     }
 
-    @media (min-width: 768px) {
+    @media (min-width: 1280px) {
       @include size (1px, 145px);
       grid-column: 7;
       grid-row: 1;
