--- a/src/styles/blocks/_subscribe.scss
+++ b/src/styles/blocks/_subscribe.scss
@@ -1,7 +1,9 @@
 .subscribe {
   background-image: url("../images/320/06.png");
   background-repeat: no-repeat;
-  background-size: cover;
+  margin: 0 auto;
+
+  @include size (320px, 386px);
 
   display: flex;
   flex-direction: column;
@@ -14,10 +16,12 @@
 
   @media (min-width: 768px) {
     background-image: url("../images/768/06.png");
+    @include size (700px, 390px);
   }
 
   @media (min-width: 1280px) {
     background-image: url("../images/1280/06.png");
+    @include size (1280px, 550px);
 
   }
 
@@ -84,7 +88,7 @@
     &:hover {
       transform: scale(1.05);
     }
-    
+
     @media (min-width: 768px) {
       @include size (70px, 70px);
       margin-left: 16px;
