--- a/src/styles/main.scss
+++ b/src/styles/main.scss
@@ -52,6 +52,7 @@ body {
 
   &__no-active {
     overflow: hidden;
+    overflow-y: scroll;
     &::after {
       content: "";
       position: fixed;
