--- a/src/styles/blocks/_events.scss
+++ b/src/styles/blocks/_events.scss
@@ -28,19 +28,27 @@
 
   &__advert {
     grid-column: 1/3;
+    display: block;
     position: relative;
-    margin: 0;
+    margin: 0 auto;
+    
+    @media (min-width: 768px) {
+      grid-column: 1/7;
+    }
+
+    @media (min-width: 1280px) {
+      grid-column: 1/13;
+    }
   }
 
   &__img {
-
     background-image: url("../images/320/04.png");
     background-repeat: no-repeat;
+    background-position: center;
     @include size (320px, 386px);
 
     @media (min-width: 768px) {
       background-image: url("../images/768/04.png");
-
       @include size (700px, 390px);
     }
 
