--- a/src/styles/blocks/_list.scss
+++ b/src/styles/blocks/_list.scss
@@ -1,7 +1,7 @@
 .list {
   display: grid;
   grid-template-columns: repeat(2, 130px);
-  gap: 20px;
+  column-gap: 20px;
 
   @media (min-width: 1280px) {
     grid-row: 1;
@@ -10,6 +10,7 @@
   &__item {
     grid-column: 1/2;
     text-decoration: none;
+    transition: 300ms ease;
     color: inherit;
     cursor: pointer;
 
@@ -21,11 +22,17 @@
       color: #f14a27;
     }
 
+    &:nth-child(3),
+    &:nth-child(4) {
+      margin-top: 30px;
+    }
+
     @media (min-width: 1280px) {
       grid-row: 1;
+
       &:nth-child(3),
       &:nth-child(4) {
-        margin-top: 30px;
+        margin-top: 45px;
       }
     }
   }
