--- a/src/styles/utils/_vars.scss
+++ b/src/styles/utils/_vars.scss
@@ -1,1 +1,8 @@
-$c-gray: #eee;
+$white-color: #fff;
+$green-color: #1a5a4c;
+$red-color: #f14a27;
+$main-colot-text: #4e4e4e;
+$dark-color: #0f0e08;
+$black-color: #000;
+$blue-color: #5042cf;
+$backgr-color:#1a5a4c;
