--- a/src/styles/main.scss
+++ b/src/styles/main.scss
@@ -1,7 +1,20 @@
-@import "utils";
-@import "fonts";
-@import "typography";
+@import "./utils/normalize";
+@import"./utils/_mixins";
+@import"./utils/_vars";
 
-body {
-  background: $c-gray;
-}
+@import"./blocks/buttons.scss";
+@import"./blocks/contacts.scss";
+@import"./blocks/container.scss";
+@import"./blocks/events.scss";
+@import"./blocks/footer.scss";
+@import"./blocks/gallery.scss";
+@import"./blocks/header.scss";
+@import"./blocks/icon.scss";
+@import"./blocks/logo.scss";
+@import"./blocks/menu.scss";
+@import"./blocks/page.scss";
+@import"./blocks/schedule.scss";
+@import"./blocks/slider.scss";
+@import"./blocks/social.scss";
+@import"./blocks/subscribe.scss";
+@import"./blocks/title.scss";
