please dont check

--- a/src/styles/blocks/burger.scss
+++ b/src/styles/blocks/burger.scss
@@ -1,6 +1,7 @@
 .burger {
   height: 400px;
   background-color: $green_color;
+  color: #fff;
 
   @include onTablet {
     height: 226px;
@@ -70,6 +71,7 @@
   }
 
   &__timetable {
+    color: #fff;
     @include onTablet {
       grid-column: 3 / 4;
     }
