--- a/src/styles/blocks/button.scss
+++ b/src/styles/blocks/button.scss
@@ -27,6 +27,13 @@
       line-height: 70px;
       padding: 0 68px;
     }
+
+    &--sub {
+      padding: 18px 24px;
+      border: 1px solid white;
+      width: calc(100% - 50px);
+      max-width: 470px;
+    }
   }
 
   &__green-rec {
@@ -41,6 +48,20 @@
     @include onTablet {
       width: 70px;
       height: 70px;
+    }
+
+    &--sub {
+      background-color: $red_color;
+      border: 1px solid transparent;
+      background-image: url(../images/icons/black-char.svg);
+
+      @include onTablet {
+        margin-left: 16px;
+      }
+
+      @include onDesktop {
+        margin-left: 30px;
+      }
     }
   }
 }
