--- a/src/styles/blocks/galery.scss
+++ b/src/styles/blocks/galery.scss
@@ -7,14 +7,15 @@
   }
 
   &__content {
-    padding: 100px 0;
+    margin: 163px 0 100px;
 
     @include onTablet {
       padding: 0 0 92px;
     }
 
     @include onDesktop {
-      padding: 752px 0 200px ;
+      padding: 302px 0 200px;
+      margin-bottom: 0;
     }
   }
 
@@ -149,6 +150,10 @@
 
     @include onTablet {
       padding-top: 32px;
+    }
+
+    @include onDesktop {
+      display: none;
     }
   }
 
