--- a/src/styles/blocks/logo.scss
+++ b/src/styles/blocks/logo.scss
@@ -1,13 +1,20 @@
 .logo {
-  margin: 0 auto;
   display: block;
-  padding: 9px 0 0;
 
-  @include onTablet {
-    grid-column: 4 / 6;
+  &__header {
+    margin: 0 auto;
+    padding: 9px 0 0;
+
+    @include onTablet {
+      grid-column: 4 / 6;
+    }
+
+    @include onDesktop {
+      grid-column: 6 / 8;
+    }
   }
 
-  @include onDesktop {
-    grid-column: 6 / 8;
-  }
+  // &__footer {
+
+  // }
 }
