--- a/src/styles/blocks/page.scss
+++ b/src/styles/blocks/page.scss
@@ -25,4 +25,14 @@
       transform: translateX(0);
     }
   }
+
+  &__title {
+    margin: 0;
+    @extend %font_h2;
+
+    @include onTablet {
+      font-size: 48px;
+      text-align: left;
+    }
+  }
 }
