--- a/src/styles/blocks/timetable.scss
+++ b/src/styles/blocks/timetable.scss
@@ -9,6 +9,10 @@
     gap: 32px;
   }
 
+  &--footer {
+    color: $title_color;
+  }
+
   &__title {
     color: white;
     @extend %font_main;
@@ -16,6 +20,11 @@
 
     @include onTablet {
       margin: 0;
+    }
+
+    &--footer {
+      margin: 0;
+      color: $title_color;
     }
   }
 
@@ -26,7 +35,11 @@
   &__body {
     @extend %font_timetable;
     margin: 20px 0 0;
-    color: white;
+    // color: white;
+
+    &--foter {
+      color: $title_color;
+    }
   }
 
   &__time {
