--- a/src/styles/main.scss
+++ b/src/styles/main.scss
@@ -13,3 +13,5 @@
 @import "blocks/timetable";
 @import "blocks/cur-events";
 @import "blocks/galery";
+@import "blocks/subscription";
+@import "blocks/footer";
