--- a/src/styles/blocks/cur-events.scss
+++ b/src/styles/blocks/cur-events.scss
@@ -11,24 +11,36 @@
     &--orange {
       @include onDesktop {
         display: block;
+        position: relative;
       }
     }
   }
 
   &__container {
     @include container;
-    position: relative;
+
+    &--orange {
+      padding: 0;
+
+      @include onTablet {
+        padding: 0 34px;
+      }
+
+      @include onDesktop {
+        padding: 0;
+      }
+    }
   }
 
   &__content {
     padding-top: 70px;
 
     @include onTablet {
-      padding-top: 107px;
+      padding-top: 88px;
     }
 
     @include onDesktop {
-      padding-top: 304px;
+      padding-top: 200px;
     }
   }
 
@@ -89,24 +101,21 @@
   }
 
   &__img--orange {
-    position: absolute;
-    right: 0;
-    left: 0;
-    // z-index: -1;
+    z-index: -1;
     margin-top: 60px;
     background-image: url(../images/cur-events/orange-S.png);
 
     @include onTablet {
       background-image: url(../images/cur-events/orange-M.png);
-      position: static;
       height: 390px;
-      margin-top: 112px;
+      margin: 112px  0;
     }
 
     @include onDesktop {
       background-image: url(../images/cur-events/orange-L.png);
-      position: absolute;
       height: 550px;
+      margin: 0;
+      margin-top: 104px;
     }
   }
 
@@ -121,17 +130,19 @@
     &--orange {
       box-shadow: 0 2px 0 rgba(26, 90, 76, 0.25);
       background: #e5e5e5;
-      transform: translateY(210px);
+      max-width: 280px;
+      margin: -60px auto;
 
       @include onTablet {
         transform: translateY(-90px);
         padding: 45px 55px 50px;
         max-width: 570px;
-        margin: auto;
+
       }
 
       @include onDesktop {
-        transform: translateY(570px);
+        transform: translateY(90px);
+        margin: -183px auto;
       }
     }
   }
@@ -146,10 +157,6 @@
 
     &--orange {
       justify-content: space-between;
-
-      // @include onTablet {
-      //   justify-content: start;
-      // }
     }
   }
 
