--- a/src/styles/blocks/header.scss
+++ b/src/styles/blocks/header.scss
@@ -7,6 +7,13 @@
   &__container {
     @include container;
 
+    @include onTablet {
+      padding: 0 0 0 34px;
+    }
+
+    @include onDesktop {
+      padding: 0 0 0 54px;
+    }
   }
 
   &__content {
@@ -53,6 +60,7 @@
     @include onTablet {
       margin: 112px 0 0;
       grid-column: 1 / 4;
+      padding: 0;
     }
 
     @include onDesktop {
@@ -67,7 +75,7 @@
     background-position: top;
     position: absolute;
     top: 0;
-    // right: 0;
+    right: 0;
     left: 0;
     // bottom: 0;
     height: 300px;
@@ -79,14 +87,15 @@
       background-image: url(../images/muzej-1800x1200.jpg);
       height: 384px;
       max-height: max-content;
-      width: 112%;
-      position: absolute;
+      width: 100%;
+      max-width: 630px;
       grid-column: 4 /7;
     }
 
     @include onDesktop {
       grid-column: 6 /13;
       height: 665px;
+      max-width: 900px;
     }
   }
 
@@ -146,9 +155,5 @@
         right: 100%;
       }
     }
-  }
-
-  &__icon-box {
-    width: $icon-width;
   }
 }
