--- a/src/styles/utils/_mixins.scss
+++ b/src/styles/utils/_mixins.scss
@@ -1,7 +1,12 @@
-@mixin hover($_property, $_toValue) {
-  transition: #{$_property} 0.3s;
+@mixin sizeIcon ($size) {
+  width: #{$size};
+  height: #{$size};
+}
+
+@mixin hover ($property, $toValue) {
+  transition: all 0.3s;
   &:hover {
-    #{$_property}: $_toValue;
+    #{$property}: $toValue;
   }
 }
 
@@ -27,7 +32,6 @@
   margin: 0 auto;
   max-width: 768px;
   padding: 0 20px;
-  // overflow-x: hidden;
 
   @include onTablet {
     max-width: 1280px;
