add event exhibition styles

--- a/src/styles/main.scss
+++ b/src/styles/main.scss
@@ -10,6 +10,9 @@
 @import "./blocks/top-actions.scss";
 @import "./blocks/menu.scss";
 @import "./blocks/decorative.scss";
+@import "./blocks/events.scss";
+@import "./blocks/exhibition.scss";
+@import "./blocks/lecture.scss";
 
 h1 {
   margin: 0;
