--- a/src/styles/blocks/_gallery.scss
+++ b/src/styles/blocks/_gallery.scss
@@ -1,11 +1,11 @@
 .gallery {
+  @media (min-width: 1280px) {
+    margin: 200px 0;
+  }
+
   &__container {
-    padding: 0 20px;
-    @media (min-width: 768px) {
-      padding: 88px 39px 133px;
-    }
     @media (min-width: 1280px) {
-      padding: 200px 55px;
+      padding: 0 55px;
     }
   }
 
@@ -15,6 +15,7 @@
       display: block;
     }
   }
+
   &__title {
     font-size: 36px;
     font-weight: 700;
@@ -93,7 +94,7 @@
   &__p3,
   &__p4 {
     transition: transform 0.5s ease;
-    
+
     &:hover {
       transform: scale(1.05);
     }
