--- a/src/styles/blocks/_main-page.scss
+++ b/src/styles/blocks/_main-page.scss
@@ -1,5 +1,13 @@
 .main-page {
   position: relative;
+  margin: 0 auto;
+
+  @media (min-width: 768px) {
+    padding: 0 39px;
+  }
+  @media (min-width: 1280px) {
+    padding: 0 55px;
+  }
 
   &__header {
     display: grid;
@@ -14,8 +22,8 @@
     @media (min-width: 768px) {
       grid-template-columns: repeat(6, 90px);
       gap: 30px;
-      grid-column: 1/7;
-      padding: 15px 23px 0;
+      grid-column: 1/6;
+      padding: 15px 0 0;
     }
 
     @media (min-width: 1280px) {
@@ -30,10 +38,6 @@
     @include size (24px, 24px);
     z-index: 0;
     border: none;
-
-    @media (min-width: 768px) {
-      margin-top: 15px;
-    }
   }
 
   &__logo {
@@ -47,6 +51,7 @@
     text-decoration: none;
     text-align: center;
     margin-left: -20px;
+
     @media (min-width: 768px) {
       grid-column: 4/6;
       @include size (200px, 72px);
@@ -67,12 +72,14 @@
   &__img {
     grid-column: 1/3;
     grid-row: 1;
+    outline: none;
+
     @include size (320px, 300px);
     margin-bottom: 20px;
 
     @media (min-width: 768px) {
       @include size (374px, 384px);
-      grid-column: 4/7;
+      grid-column: 4/6;
     }
 
     @media (min-width: 1280px) {
