--- a/src/styles/blocks/_menu.scss
+++ b/src/styles/blocks/_menu.scss
@@ -11,7 +11,9 @@
   background-color: $c-green;
   color: #fff;
   width: 100%;
+  max-height: 100vh;
   z-index: 10;
+  overflow-y: auto;
 
   &:target {
     transform: translate(0);
