--- a/src/styles/main.scss
+++ b/src/styles/main.scss
@@ -28,6 +28,7 @@ body {
 }
 
 [class$="__container"] {
+
   display: grid;
   grid-template-columns: repeat(2, 130px);
   gap: 20px;
@@ -42,17 +43,25 @@ body {
 
   @media (min-width: 1280px) {
     grid-template-columns: repeat(12, 70px);
-    min-width: 1280px;
+    width: 1280px;
   }
 }
 
 .body {
-  margin: 0;
+  margin: 0 auto;
+  position: relative;
   overflow-x: hidden;
+  width: 320px;
 
+  @media (min-width: 768px) {
+    min-width: 768px;
+  }
+
+  @media (min-width: 1280px) {
+    width: 1280px;
+  }
   &__no-active {
     overflow: hidden;
-    overflow-y: scroll;
     &::after {
       content: "";
       position: fixed;
