--- a/src/styles/blocks/_events.scss
+++ b/src/styles/blocks/_events.scss
@@ -2,14 +2,17 @@
 @import "card";
 
 .events {
-
+  @media (min-width: 1280px) {
+    padding: 0 55px;
+  }
+  
   &__title {
     grid-column: 1/3;
     font-weight: 700;
     font-size: 36px;
     line-height: 100%;
     text-align: center;
-    width: 320px;
+    width: 280px;
     padding: 0 20px;
 
     @media (min-width: 768px) {
@@ -31,20 +34,27 @@
     display: block;
     position: relative;
     margin: 0 auto;
-    
+    @include size (320px, 210px);
+
+    width: 100%;
+
     @media (min-width: 768px) {
       grid-column: 1/7;
+      padding: 0 39px;
+      @include size (700px, 390px);
+
     }
 
     @media (min-width: 1280px) {
-      grid-column: 1/13;
+      grid-column: 1/12;
+      padding: 0;
+      @include size (1280px, 550px);
     }
   }
 
   &__img {
     background-image: url("../images/320/04.png");
     background-repeat: no-repeat;
-    background-position: center;
     @include size (320px, 386px);
 
     @media (min-width: 768px) {
@@ -98,7 +108,7 @@
 
     @media (min-width: 768px) {
       @include size (570px, 204px);
-      left: 65px;
+      left: 104px;
       top: 290px;
     }
 
