add galery and edit classicism block

--- a/src/styles/blocks/section-title.scss
+++ b/src/styles/blocks/section-title.scss
@@ -21,10 +21,11 @@
   &--classicism {
     font-weight: 400;
     font-size: 28px;
-    text-align: left;
+    text-align: center;
 
     @include onTablet {
       font-size: 36px;
+      text-align: left;
     }
   }
 
