--- a/src/styles/blocks/footer.scss
+++ b/src/styles/blocks/footer.scss
@@ -22,15 +22,37 @@
     }
   }
 
+  &__logo-image {
+    @include hover (transform, scale(1.2));
+  }
+
   &__icon-block {
+    display: flex;
+    flex-direction: row;
+    gap: 25px;
     @include onTablet {
       margin-top: 60px;
     }
   }
 
   &__icon {
+    display: block;
+    width: 24px;
+    height: 24px;
+    background-position: center;
+    background-size: cover;
+    @include hover (transform, scale(1.2));
+
+    &:hover {
+      fill: #1a5a4c;
+    }
+
     &--facebook {
-      margin-right: 25px;
+      background-image: url(../images/icon/icon-facebook-1.svg);
+    }
+
+    &--instagram {
+      background-image: url(../images/icon/instagram-logo.svg);
     }
   }
 
