--- a/src/styles/blocks/header.scss
+++ b/src/styles/blocks/header.scss
@@ -52,6 +52,10 @@
 
   }
 
+  &__logo-image {
+    @include hover (transform, scale(1.2));
+  }
+
   &__icon {
     position: absolute;
     top: 27px;
