--- a/src/styles/blocks/subscription.scss
+++ b/src/styles/blocks/subscription.scss
@@ -47,11 +47,6 @@
     border: none;
     outline: none;
 
-    &:hover {
-      background: #F1E2E0;
-      background: linear-gradient(to top, #F1E2E0, #EEBDBA);
-    }
-
     @include onTablet {
       width: 374px;
       height: 70px;
@@ -76,6 +71,7 @@
     background-position: center;
     border: none;
     outline: none;
+    cursor: pointer;
     @include hover (transform, scale(1.2));
 
     @include onTablet {
