--- a/src/styles/blocks/nav.scss
+++ b/src/styles/blocks/nav.scss
@@ -13,6 +13,7 @@
 
   &__item {
     list-style-type: none;
+    @include hover (transform, scale(1.2));
   }
 
   &__link {
@@ -24,7 +25,7 @@
     color: $nav-main-color;
 
     &:hover {
-      color: rgb(0, 135, 23);
+      color: #a3ecd3;
     }
 
     @include onDesktop {
@@ -37,7 +38,7 @@
       font-size: 14px;
 
       &:hover {
-        color: rgb(0, 135, 23);
+        color: #a3ecd3;
       }
 
       @include onDesktop {
