--- a/src/styles/blocks/footer.scss
+++ b/src/styles/blocks/footer.scss
@@ -47,6 +47,12 @@
   }
 
   &__info {
+    font-family: "IBM Plex Sans", sans-serif;
+    font-style: normal;
+    font-weight: 400;
+    font-size: 14px;
+    line-height: 140.62%;
+
     @include smartphone {
       grid-row: 1;
       grid-column: 2 / 4;
@@ -58,9 +64,7 @@
     }
 
     &--block {
-      @include smartphone {
-        display: flex;
-      }
+      list-style: none;
     }
   }
 
@@ -73,25 +77,6 @@
 
     color: $color-dark;
     margin-bottom: 20px;
-  }
-
-  &__time {
-    font-family: $font-family;
-    font-style: $font-style;
-    font-weight: 600;
-    font-size: 14px;
-    line-height: 150%;
-    color: $color-dark;
-  }
-
-  &__day {
-    font-family: $font-family;
-    font-style: $font-style;
-    font-weight: 400;
-    font-size: 14px;
-    line-height: 140.62%;
-
-    color: $color-dark;
   }
 
   &__contacts {
@@ -124,11 +109,6 @@
         font-size: 14px;
         line-height: 150%;
         color: $color-dark;
-
-        &::after {
-          position: absolute;
-          content: ":";
-        }
       }
     }
   }
@@ -214,6 +194,10 @@
     color: $color-dark;
     margin-bottom: 20px;
     grid-column: 1 / -1;
+
+    &:hover {
+      font-weight: bold;
+    }
 
     @include smalldesktop {
       grid-row: 1;
