--- a/src/styles/blocks/gallery.scss
+++ b/src/styles/blocks/gallery.scss
@@ -55,6 +55,8 @@
     height: 410px;
     transition: 0.5s all;
 
+    @include hover (transform, scale(1.1));
+
     @include smalldesktop {
       width: 100%;
       height: 100%;
