--- a/src/styles/blocks/page.scss
+++ b/src/styles/blocks/page.scss
@@ -6,10 +6,13 @@
   font-size: 14px;
   line-height: 100%;
   color: $color-dark;
-  scroll-behavior: smooth;
+
+  html {
+    scroll-behavior: smooth;
+  }
 
   &__body {
-    background: $background-color;
+    background: $color-white;
     &--hidden {
       overflow: hidden;
     }
