--- a/src/styles/blocks/subscription.scss
+++ b/src/styles/blocks/subscription.scss
@@ -69,21 +69,25 @@
     grid-column: 1 / -1;
     text-align: center;
     margin-bottom: 88px;
+
   }
 
   &__item {
-    width: 230px;
-    height: 48px;
+    flex-grow: 1;
+    border: none;
+    height: 50px;
     font-family: 'Montserrat';
     font-style: $font-style;
     font-weight: 400;
     font-size: 14px;
     line-height: 100%;
+    cursor: pointer;
+    padding: 0 28px;
 
     color: #687480;
 
     @include smartphone {
-      height: 67px;
+      height: 70px;
     }
   }
 
@@ -92,6 +96,7 @@
     height: 50px;
     background: #F14A27;
     transform: translate(-5px, -5px);
+    cursor: pointer;
 
     @include smartphone {
       width: 70px;
