--- a/src/styles/blocks/_subscribe.scss
+++ b/src/styles/blocks/_subscribe.scss
@@ -2,25 +2,25 @@
   background-image: url("../images/320/06.png");
   background-repeat: no-repeat;
   margin: 0 auto;
-  @include size (320px, 386px);
 
   display: flex;
   flex-direction: column;
   justify-content: center;
   align-items: center;
   margin-bottom: 50px;
-
-  @include size (320px, 386px);
+  background-size: cover;
+  @include size (100%, 386px);
 
   @media (min-width: 768px) {
     background-image: url("../images/768/06.png");
-    background-size: contain;
-    @include size (768px, 380px);
+
+    @include size (100%, 380px);
   }
 
   @media (min-width: 1280px) {
     background-image: url("../images/1280/06.png");
-    @include size (1280px, 550px);
+    @include size (100%, 550px);
+
   }
 
   &__contain {
@@ -42,6 +42,7 @@
     margin-top: 20px;
     width: 100%;
     padding: 0 20px;
+
     @media (min-width: 768px) {
       margin-top: 16px;
       padding: 0;
@@ -53,6 +54,7 @@
     justify-content: center;
     align-items: center;
     margin-top: 50px;
+
     @media (min-width: 768px) {
       margin-top: 64px;
     }
