--- a/src/styles/main.scss
+++ b/src/styles/main.scss
@@ -30,20 +30,19 @@ body {
 [class$="__container"] {
 
   display: grid;
-  grid-template-columns: repeat(2, 130px);
+  grid-template-columns: repeat(2, 1fr);
   gap: 20px;
-  width: 320px;
-  margin: 0 auto;
+  padding: 0 20px;
 
   @media (min-width: 768px) {
-    grid-template-columns: repeat(6, 90px);
+    grid-template-columns: repeat(6, 1fr);
     gap: 30px;
-    width: 768px;
+    padding: 0 39px;
   }
 
   @media (min-width: 1280px) {
-    grid-template-columns: repeat(12, 70px);
-    width: 1280px;
+    grid-template-columns: repeat(12, 1fr);
+    padding: 0 55px;
   }
 }
 
@@ -51,15 +50,7 @@ body {
   margin: 0 auto;
   position: relative;
   overflow-x: hidden;
-  width: 320px;
 
-  @media (min-width: 768px) {
-    min-width: 768px;
-  }
-
-  @media (min-width: 1280px) {
-    width: 1280px;
-  }
   &__no-active {
     overflow: hidden;
     &::after {
