--- a/src/styles/blocks/_events.scss
+++ b/src/styles/blocks/_events.scss
@@ -2,10 +2,7 @@
 @import "card";
 
 .events {
-  @media (min-width: 1280px) {
-    padding: 0 55px;
-  }
-  
+
   &__title {
     grid-column: 1/3;
     font-weight: 700;
@@ -13,13 +10,11 @@
     line-height: 100%;
     text-align: center;
     width: 280px;
-    padding: 0 20px;
 
     @media (min-width: 768px) {
       grid-column: 1/8;
       font-size: 48px;
       text-align: left;
-      padding: 0 39px;
       width: auto;
     }
   }
@@ -33,38 +28,33 @@
     grid-column: 1/3;
     display: block;
     position: relative;
-    margin: 0 auto;
-    @include size (320px, 210px);
-
-    width: 100%;
 
     @media (min-width: 768px) {
       grid-column: 1/7;
-      padding: 0 39px;
-      @include size (700px, 390px);
 
     }
 
     @media (min-width: 1280px) {
       grid-column: 1/12;
       padding: 0;
-      @include size (1280px, 550px);
     }
   }
 
   &__img {
+    display: block;
     background-image: url("../images/320/04.png");
     background-repeat: no-repeat;
-    @include size (320px, 386px);
+    background-size: cover;
+    @include size (100vw, 210px);
 
     @media (min-width: 768px) {
       background-image: url("../images/768/04.png");
-      @include size (700px, 390px);
+      height: 390px;
     }
 
     @media (min-width: 1280px) {
       background-image: url("../images/1280/04.png");
-      @include size (1280px, 550px);
+      height: 550px;
     }
   }
 
@@ -92,29 +82,28 @@
   }
 
   &__box {
-    position: absolute;
-    top: 140px;
-    left: 20px;
+    margin: 0 auto;
+    max-width: 570px;
 
+    transform: translateY(-40%);
+    margin-bottom: -52px;
     display: flex;
     flex-direction: column;
     justify-content: center;
-    z-index: 2;
+    z-index: 6;
 
     @include size (280px, 140px);
-    background: #fff;
-    box-shadow: 0 2px 0 rgba(26, 90, 76, 0.25);
     text-align: center;
+    background-color: #fff;
+    box-shadow: 0 2px 0 rgba(21,23,22,0.25);
 
     @media (min-width: 768px) {
       @include size (570px, 204px);
-      left: 104px;
-      top: 290px;
+      margin-bottom: -52px;
     }
 
     @media (min-width: 1280px) {
-      left: 355px;
-      top: 450px;
+      margin-bottom: -80px;
     }
   }
 }
