--- a/src/styles/blocks/_footer.scss
+++ b/src/styles/blocks/_footer.scss
@@ -1,6 +1,8 @@
 .footer {
   &__container {
+    max-width: 1170px;
     padding: 0 20px;
+    margin: 0 auto;
     @media (min-width: 768px) {
       padding: 0 39px;
     }
@@ -10,6 +12,7 @@
   }
 
   &__logo {
+    font-family: Montserrat, sans-serif;
     grid-row: 1;
     grid-column: 1/2;
     font-weight: 700;
@@ -52,7 +55,6 @@
     img:hover {
       transform: scale(1.1);
     }
-
   }
 
   &__contacts {
@@ -122,7 +124,7 @@
     grid-column: 1/3;
 
     @media (min-width: 768px) {
-      grid-template-columns: repeat(2, 210px);
+      grid-template-columns: repeat(2, 1fr);
       grid-column: 2/7;
       margin-top: 64px;
     }
