--- a/src/styles/blocks/_gallery.scss
+++ b/src/styles/blocks/_gallery.scss
@@ -1,18 +1,14 @@
 .gallery {
   @media (min-width: 1280px) {
-    margin: 200px 0;
-  }
-
-  &__container {
-    @media (min-width: 1280px) {
-      padding: 0 55px;
-    }
+    margin: 70px 0;
   }
 
   &__static {
     display: none;
     @media (min-width: 1280px) {
       display: block;
+      max-width: 1280px;
+      margin: 0 auto;
     }
   }
 
@@ -27,6 +23,7 @@
       font-size: 48px;
       padding-bottom: 48px;
     }
+
     @media (min-width: 1280px) {
       grid-column: 1/12;
       padding-bottom: 56px;
@@ -41,12 +38,6 @@
     @media (min-width: 1280px) {
       display: none;
     }
-
-  }
-
-  &__p,
-  &__p1 {
-    @include size (340px, 543px);
   }
 
   &__p1 {
@@ -55,7 +46,7 @@
 
     @media (min-width: 1280px) {
       display: block;
-      grid-column: 1/4;
+      grid-column: 1/5;
     }
   }
 
@@ -93,6 +84,7 @@
   &__p2,
   &__p3,
   &__p4 {
+    @include size (100%, 100%);
     transition: transform 0.5s ease;
 
     &:hover {
