--- a/src/styles/blocks/_menu.scss
+++ b/src/styles/blocks/_menu.scss
@@ -7,7 +7,7 @@
   transform: translateX(100%);
   transition: transform 800ms;
 
-  padding: 27px 20px;
+  padding: 27px 0;
   background-color: $c-green;
   color: #fff;
   width: 100%;
@@ -21,24 +21,16 @@
 
   @media (min-width: 768px) {
     height: 225px;
-    padding: 0;
+    padding-top: 39px;
   }
 
   @media (min-width: 1280px) {
     height: 233px;
+    padding-top: 50px;
   }
 
   &__container {
     height: 400px;
-
-    @media (min-width: 768px) {
-      height: 100%;
-      padding: 45px 30px;
-    }
-
-    @media (min-width: 1280px) {
-      padding: 45px 0;
-    }
   }
 
   &__close {
@@ -47,7 +39,7 @@
     @include size (13px, 13px);
 
     @media (min-width: 1280px) {
-      margin-left: 30px;
+      margin-right: 30px;
     }
   }
 
@@ -91,7 +83,7 @@
 
     @media (min-width: 768px) {
       display: grid;
-      grid-template-columns: repeat(2, auto);
+      grid-template-columns: repeat(2, 1fr);
       gap: 20px;
       grid-column: 4/7;
       padding-left: 20px;
