--- a/src/styles/blocks/header.scss
+++ b/src/styles/blocks/header.scss
@@ -19,9 +19,7 @@
     color: $color-dark;
     transform: translateX(-70%);
 
-    &:hover {
-      transform: scale(1.1);
-    }
+    @include hover(transform, scale(1.1));
 
     @include smartphone {
       grid-column: 4 / span 2;
