--- a/src/styles/blocks/container.scss
+++ b/src/styles/blocks/container.scss
@@ -1,7 +1,7 @@
 .container {
   max-width: 100%;
+  box-sizing: border-box;
   margin: 0 auto;
-  scroll-behavior: smooth;
   padding: 0 20px;
 
   @include smartphone {
