--- a/src/styles/blocks/footer.scss
+++ b/src/styles/blocks/footer.scss
@@ -14,6 +14,8 @@
 
     color: $color-dark;
 
+    @include hover(transform, scale(1.1));
+
     @include smartphone {
       height: 70px;
       margin-top: 51px;
@@ -46,9 +48,13 @@
     }
   }
 
+  &__fb-inst {
+    @include hover(transform, scale(1.2));
+  }
+
   &__info {
-    font-family: "IBM Plex Sans", sans-serif;
-    font-style: normal;
+    font-family: $font-family, sans-serif;
+    font-style: $font-style;
     font-weight: 400;
     font-size: 14px;
     line-height: 140.62%;
@@ -100,6 +106,10 @@
 
     color: $color-dark;
     margin-top: 30px;
+
+    &:hover {
+      font-weight: bold;
+    }
 
     @include smalldesktop {
       &--weekend {
