add hover edits

--- a/src/styles/blocks/art-museum.scss
+++ b/src/styles/blocks/art-museum.scss
@@ -43,20 +43,26 @@
 
     @include onTablet {
       justify-content: start;
-   }
+    }
 
-    @include onDesktop {
+      @include onDesktop {
       font-size: 72px;
-     }
+    }
+  }
+
+  &__tickets {
+    display: flex;
+    transition: all 0.75s;
+
+    &:hover {
+      box-shadow: -8px 6px 6px 0px rgba(25, 86, 73, 1);
+    }
   }
 }
 
 .button {
   position: relative;
-  transition: all 0.75s;
-  &:hover {
-      box-shadow: -8px 6px 6px 0px rgba(25, 86, 73, 1);
-    }
+
   @include onDesktop {
     margin-left: 190px;
   }
