--- a/src/styles/blocks/header.scss
+++ b/src/styles/blocks/header.scss
@@ -1,5 +1,4 @@
 .header {
-  // display: none;
   @extend %font_main;
   line-height: 150%;
   color: $title_color;
@@ -77,7 +76,6 @@
     top: 0;
     right: 0;
     left: 0;
-    // bottom: 0;
     height: 300px;
     max-height: 300px;
     width: 100%;
@@ -103,6 +101,7 @@
     @extend %font_h2;
     font-size: 45px;
     margin: 0 0 20px;
+    color: #000;
 
     @include onTablet {
       margin: 0 0 38px;
