--- a/src/styles/blocks/nav.scss
+++ b/src/styles/blocks/nav.scss
@@ -1,8 +1,6 @@
 .nav {
   display: grid;
   grid-template-columns: $mobile-icon-size 1fr;
-  color: #fff;
-
   gap: 28px;
 
   @include onTablet {
@@ -11,6 +9,11 @@
 
   @include onSmall-desktop {
     gap: 102px;
+  }
+
+  &--footer {
+    display: block;
+    grid-column: 1 / 3;
   }
 
   &__container {
@@ -39,7 +42,7 @@
   &__item {
     @extend %font_event;
 
-    // color: white;
+    color: inherit;
     text-decoration: none;
 
     @include onSmall-desktop {
