--- a/src/styles/blocks/timetable.scss
+++ b/src/styles/blocks/timetable.scss
@@ -11,10 +11,14 @@
 
   &--footer {
     color: $title_color;
+    grid-column: 1 / 2;
+  }
+
+  &--contacts {
+    grid-column: 2 / 3;
   }
 
   &__title {
-    color: white;
     @extend %font_main;
     margin: 24px 0 0;
 
@@ -35,7 +39,6 @@
   &__body {
     @extend %font_timetable;
     margin: 20px 0 0;
-    // color: white;
 
     &--foter {
       color: $title_color;
