--- a/src/styles/blocks/cur-events.scss
+++ b/src/styles/blocks/cur-events.scss
@@ -163,6 +163,7 @@
   &__small-title {
     margin-top: 20px;
     @extend %font_event;
+    color: #687480;
 
     @include onTablet {
       font-size: 14px;
@@ -181,6 +182,7 @@
   &__data {
     margin-top: 16px;
     @extend %font_data;
+    color: $green_color;
 
     @include onTablet {
       font-size: 14px;
@@ -242,6 +244,7 @@
     font-weight: 300;
     font-size: 16px;
     margin-top: 10px;
+    color: $text_color;
 
     @include onTablet {
       max-width: 460px;
